--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" type="" href="/bash_logo.png"/>
+    <link rel="icon" type="" href="src/assets/bash_logo.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Siddharth's Portfolio</title>
 </head>
 <body>
 <div id="root"></div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
 <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
